--- a/index.html
+++ b/index.html
@@ -278,11 +278,16 @@
                         email：zhhao_1995@stu.xidian.edu.cn
                     </h3>
                 </li><p></p>
-
-                <li></li><h3>github：https://github.com/Harzva</h3></li>
-                <p></p>
-                <li></li><h3>Personal Homepage：https://Harzva.github.io</h3></li>
-                <p></p>
+                <li>
+                    <h3>
+                        github：https://github.com/Harzva
+                    </h3>
+                </li><p></p>
+                <li>
+                    <h3>
+                        Personal Homepage：https://Harzva.github.io
+                    </h3>
+                </li><p></p>
                 <!-- <h3>email-2：18733111944@163.com
                 </h3> -->
                 <!-- <p>
